--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root {
+  --amplify-primary-color: #006eff;
+  --amplify-primary-tint: #005ed9;
+  --amplify-primary-shade: #005ed9;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ecf1f8;
 }
 
 code {
